# streamlit_practice

./: README.md  pyproject.toml
pages/: 2_translater.py
streamlit_practice/pages/: 2_translater.py  3_samples.py  4_openai_chat.py
