[tool.poetry]
name = "streamlit_practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
pillow = "^10.3.0"
langchain = "^0.3.15"
langchain-openai = "^0.3.2"
openai = "^1.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false
